--- a/css/index.styl
+++ b/css/index.styl
@@ -99,6 +99,16 @@ ul.nav
       left: 380px
       width: 88px
 
+    li button
+      top: 35px
+
+    .cancel
+      top: 98px
+    
+    .save
+      top: 98px
+      left: 285px
+
 
 .ui-layout-north
   margin: 0
@@ -184,6 +194,8 @@ ul.purchasedList
 /*  Form Items */
 form
   border-bottom: 1px solid #d2d2d1;
+  padding-bottom:10px
+  margin-bottom: 10px
   
 button
   border: 1px solid #bbbbbb;
