--- a/public/application.css
+++ b/public/application.css
@@ -1,50 +1,436 @@
-@import "./normalize.css";
-@import "./layout.css";
-@import "./jqueryui.css";
-.button{cursor:pointer;color:#333;}
-.button:active{background:#dadada;-moz-box-shadow:inset 0 0 10px #9c9c9c;-webkit-box-shadow:inset 0 0 10px #9c9c9c;-moz-box-shadow:inset 0 0 10px #9c9c9c;-webkit-box-shadow:inset 0 0 10px #9c9c9c;box-shadow:inset 0 0 10px #9c9c9c}
-a.button{color:#00f}
-ul.nav{margin:0;padding:0;}
-ul.nav li{display:inline;border-right:1px solid #000;padding:20px;line-height:25px}
-.ui-accordion .ui-accordion-content{padding:0}
-.ui-accordion .ui-accordion-header{padding-left:25px;height:35px;line-height:35px;font-size:16px;border-bottom:1px solid rgba(0,0,0,0.30);text-shadow:0 1px 1px #fff;background:#e0e0e1;background:-webkit-gradient(linear,left top,left bottom,from(#fff),to(#e0e0e1));background:-moz-linear-gradient(top,#fff,#e0e0e1);background:linear-gradient(top,#fff,#e0e0e1);-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.10);-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.10);box-shadow:1px 1px 2px rgba(0,0,0,0.10);overflow:hidden}
-.ui-icon-off{display:none}
-.ui-layout-north header{background:url("../img/rig.png") no-repeat center left;height:70px;padding-left:165px;border-bottom:3px solid #eb8f00;}
-.ui-layout-north header h1{padding-top:17px;color:#58585c}
-.ui-layout-north header .help{background:url("../img/question.png") no-repeat center left;width:100px;height:70px;}
-.ui-layout-north header .help span{float:right;color:#58585c;padding:20px 12px 0 0;font-weight:bold;font-size:14px}
-.ui-layout-west,.ui-layout-center{padding:0;margin:0;}
-.ui-layout-west header,.ui-layout-center header{height:25px}
-.ui-layout-west ul.nav,.ui-layout-center ul.nav,.ui-layout-west header,.ui-layout-center header{color:#9c9c9c;border-bottom:1px solid rgba(0,0,0,0.30);font-weight:bold;text-shadow:0 1px 1px #fff;font-size:14px;background:#e0e0e1;background:-webkit-gradient(linear,left top,left bottom,from(#fff),to(#e0e0e1));background:-moz-linear-gradient(top,#fff,#e0e0e1);background:linear-gradient(top,#fff,#e0e0e1);-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.10);-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.10);box-shadow:1px 1px 2px rgba(0,0,0,0.10);overflow:hidden}
-.ui-layout-west .content,.ui-layout-center .content{padding:40px;color:#9c9c9c;font-weight:bold;}
-.ui-layout-west .content em,.ui-layout-center .content em{color:#eb8f00}
-.ui-layout-west .content button,.ui-layout-center .content button{position:absolute;top:85px;left:380px;width:88px}
-.ui-layout-north{margin:0;padding:0;}
-.ui-layout-north h1{margin:0;padding:0}
-.ui-layout-north .help{position:absolute;top:0;right:0}
-.cart,.showItem,.editItem,.checkoutWindow{display:none}
-.active{display:block !important}
-.ui-layout-center{position:relative;}
-.ui-layout-center > *:not(.active){display:none}
-ul.itemsList{margin:0;padding:0;list-style:none;}
-ul.itemsList li{height:35px;padding:0 0 0 50px;font-size:14px;line-height:35px;font-weight:bold;border-bottom:1px solid #d2d2d1;color:#333;border-bottom:1px solid rgba(0,0,0,0.30);text-shadow:0 1px 1px #fff;background:#e0e0e1;background:-webkit-gradient(linear,left top,left bottom,from(#fff),to(#e0e0e1));background:-moz-linear-gradient(top,#fff,#e0e0e1);background:linear-gradient(top,#fff,#e0e0e1);-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.10);-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.10);box-shadow:1px 1px 2px rgba(0,0,0,0.10);overflow:hidden;}
-ul.itemsList li img{float:left;padding:5px}
-ul.itemsList li.active{background:url("../img/bubblesNav.png") no-repeat center right}
-ul.purchasedList{margin:0;padding:0;list-style:none;}
-ul.purchasedList li{height:60px;padding:10px 15px 10px 0;font-weight:bold;border-bottom:2px solid #d2d2d1;color:#333;text-overflow:ellipsis;overflow:hidden;white-space:nowrap;position:relative;}
-ul.purchasedList li img{float:left;padding:5px}
-ul.purchasedList li button{top:20px;left:350px}
-form{border-bottom:1px solid #d2d2d1}
-button{border:1px solid #bbb;font-weight:bold;text-shadow:0 1px 1px #fff;font-family:Helvetica,Arial,"MS Trebuchet",sans-serif;font-size:14px;color:#363636;padding:6px 10px;margin:1px 1px 1px 0;outline:none;background:#f9f9f9;background:#e3e3e3;background:-webkit-gradient(linear,left top,left bottom,from(#f9f9f9),to(#e3e3e3));background:-moz-linear-gradient(top,#f9f9f9,#e3e3e3);background:linear-gradient(top,#f9f9f9,#e3e3e3);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-moz-box-shadow:0 1px 1px #fff;-webkit-box-shadow:0 1px 1px #fff;box-shadow:0 1px 1px #fff;}
-button:active{background:#f9f9f9;background:-webkit-gradient(linear,left top,left bottom,from(#e3e3e3),to(#f9f9f9));background:-moz-linear-gradient(top,#e3e3e3,#f9f9f9);background:linear-gradient(top,#e3e3e3,#f9f9f9)}
-button.default{color:#fff;border:1px solid #3f68a5;text-shadow:0 -1px 1px #46677f;background:#4775b8;background:-webkit-gradient(linear,left top,left bottom,from(#7bb5db),to(#4775b8));background:-moz-linear-gradient(top,#7bb5db,#4775b8);background:linear-gradient(top,#7bb5db,#4775b8)}
-button.default:active{background:#7bb5db;background:-webkit-gradient(linear,left top,left bottom,from(#4775b8),to(#7bb5db));background:-moz-linear-gradient(top,#4775b8,#7bb5db);background:linear-gradient(top,#4775b8,#7bb5db)}
-label{display:block;margin:0 0 20px 0;overflow:visible}
-label span{display:block;margin-bottom:6px;margin-left:-3px;font-weight:bold;font-size:13px}
-label input{font-size:14px;display:block}
-label input[type="checkbox"]{width:15px !important;margin-right:7px;display:inline-block}
-label input[type="checkbox"] + span{display:inline}
-label input[type="text"],label input[type="email"],input[type="password"]{width:220px;margin:0 2px 0 0;padding:4px 8px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-textarea{width:220px;margin:0 2px 0 0;padding:4px 8px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-textarea,input[type="text"],input[type="email"],input[type="password"]{border:1px solid #9e9fa2;color:#363636;text-shadow:0 1px 1px #fff;font-size:17px;outline:none;padding:10px;-moz-border-radius:20px;-webkit-border-radius:20px;border-radius:20px;background:#fafafa;background:-webkit-gradient(linear,left top,left bottom,from(#e6e6e7),to(#fafafa));background:-moz-linear-gradient(top,#e6e6e7,#fafafa);background:linear-gradient(top,#e6e6e7,#fafafa);background:-webkit-gradient(linear,left top,left bottom,from(#e6e6e7),color-stop(.3,#fafafa),to(#fafafa))}
-textarea{-moz-border-radius:10px;-webkit-border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;border-radius:10px;height:70px}
+@import './normalize.css';
+@import './layout.css';
+@import './jqueryui.css';
+.hidden {
+  display: none;
+}
+.button {
+  cursor: pointer;
+  color: #333;
+}
+.button:active {
+  background: #dadada;
+  -moz-box-shadow: inset 0 0 10px #9c9c9c;
+  -webkit-box-shadow: inset 0 0 10px #9c9c9c;
+  -moz-box-shadow: inset 0 0 10px #9c9c9c;
+  -webkit-box-shadow: inset 0 0 10px #9c9c9c;
+  box-shadow: inset 0 0 10px #9c9c9c;
+}
+@font-face {
+  font-family: 'UniversLTStd57Condensed';
+  src: url("fonts/universltstd_cn-webfont.eot");
+  src: url("fonts/universltstd_cn-webfont.eot?#iefix") format('embedded-opentype'), url("fonts/universltstd_cn-webfont.woff") format('woff'), url("fonts/universltstd_cn-webfont.ttf") format('truetype'), url("fonts/universltstd_cn-webfont.svg#UniversLTStd57Condensed") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'UniversLTStd65Bold';
+  src: url("fonts/universltstd_bold-webfont.eot");
+  src: url("fonts/universltstd_bold-webfont.eot?#iefix") format('embedded-opentype'), url("fonts/universltstd_bold-webfont.woff") format('woff'), url("fonts/universltstd_bold-webfont.ttf") format('truetype'), url("fonts/universltstd_bold-webfont.svg#UniversLTStd65Bold") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.cardFront {
+  margin-left: 340px;
+  z-index: 10;
+  background: #fff;
+}
+.cardBack {
+  margin-top: 140px;
+  z-index: 5;
+  background: #f58025;
+}
+.businessCard {
+  position: relative;
+  height: 468px;
+  padding: 5px;
+  border: 1px dotted #000;
+  width: 900px;
+}
+.card {
+  height: 325px;
+  width: 555px;
+  border: 1px solid #000;
+  font-size: 0.909em;
+  position: absolute;
+  line-height: 120%;
+  font-family: UniversLTStd57Condensed;
+  font-weight: lighter;
+  color: #807f83;
+}
+.card .name {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+}
+.card .name .who {
+  color: #f58025;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 180%;
+  font-family: UniversLTStd65Bold;
+}
+.card .logo {
+  position: absolute;
+  top: 136px;
+  left: 46px;
+  width: 160px;
+  height: 60px;
+  background: url("../img/img/rignet_700x400.png") no-repeat top left;
+}
+.card .info {
+  position: absolute;
+  bottom: 40px;
+  left: 50px;
+}
+.card .info .numberType {
+  font-size: 10px;
+}
+.card .info .website {
+  color: #f58025;
+}
+.card .info .divider {
+  padding: 0 7px;
+  color: #f58025;
+}
+.card .qr {
+  position: absolute;
+  left: 50px;
+  top: 40px;
+  width: 220px;
+  line-height: 130%;
+  height: 325px;
+  font-size: 23px;
+  color: #fff;
+}
+.card .qr .qrcode {
+  width: 215px;
+  height: 215px;
+}
+.card .mottoBox {
+  position: absolute;
+  color: #fff;
+  bottom: 40px;
+  right: 50px;
+  font-size: 23px;
+  line-height: 130%;
+}
+.card .mottoBox .bubbles {
+  background: url("../img/img/bubbles.png") no-repeat top center;
+  height: 40px;
+  width: 180px;
+}
+a.button {
+  color: #00f;
+}
+ul.nav {
+  margin: 0;
+  padding: 0;
+}
+ul.nav li {
+  display: inline;
+  border-right: 1px solid #000;
+  padding: 20px;
+  line-height: 25px;
+}
+.ui-accordion .ui-accordion-content {
+  padding: 0;
+}
+.ui-accordion .ui-accordion-header {
+  padding-left: 25px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 16px;
+  border-bottom: 1px solid rgba(0,0,0,0.30);
+  text-shadow: 0 1px 1px #fff;
+  background: #e0e0e1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e0e0e1));
+  background: -moz-linear-gradient(top, #fff, #e0e0e1);
+  background: linear-gradient(top, #fff, #e0e0e1);
+  -moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  overflow: hidden;
+}
+.ui-icon-off {
+  display: none;
+}
+.ui-layout-north header {
+  background: url("../img/rig.png") no-repeat center left;
+  height: 70px;
+  padding-left: 165px;
+  border-bottom: 3px solid #f58025;
+}
+.ui-layout-north header h1 {
+  padding-top: 17px;
+  color: #58585c;
+}
+.ui-layout-north header .help {
+  background: url("../img/question.png") no-repeat center left;
+  width: 100px;
+  height: 70px;
+}
+.ui-layout-north header .help span {
+  float: right;
+  color: #58585c;
+  padding: 20px 12px 0 0;
+  font-weight: bold;
+  font-size: 14px;
+}
+.ui-layout-west,
+.ui-layout-center {
+  padding: 0;
+  margin: 0;
+}
+.ui-layout-west header,
+.ui-layout-center header {
+  height: 25px;
+}
+.ui-layout-west ul.nav,
+.ui-layout-center ul.nav,
+.ui-layout-west header,
+.ui-layout-center header {
+  color: #9c9c9c;
+  border-bottom: 1px solid rgba(0,0,0,0.30);
+  font-weight: bold;
+  text-shadow: 0 1px 1px #fff;
+  font-size: 14px;
+  background: #e0e0e1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e0e0e1));
+  background: -moz-linear-gradient(top, #fff, #e0e0e1);
+  background: linear-gradient(top, #fff, #e0e0e1);
+  -moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  overflow: hidden;
+}
+.ui-layout-west .content,
+.ui-layout-center .content {
+  padding: 40px;
+  color: #9c9c9c;
+  font-weight: bold;
+}
+.ui-layout-west .content em,
+.ui-layout-center .content em {
+  color: #f58025;
+}
+.ui-layout-west .content button,
+.ui-layout-center .content button {
+  position: absolute;
+  top: 85px;
+  left: 380px;
+  width: 88px;
+}
+.ui-layout-west .content li button,
+.ui-layout-center .content li button {
+  top: 35px;
+}
+.ui-layout-west .content .cancel,
+.ui-layout-center .content .cancel {
+  top: 98px;
+}
+.ui-layout-west .content .save,
+.ui-layout-center .content .save {
+  top: 98px;
+  left: 285px;
+}
+.ui-layout-north {
+  margin: 0;
+  padding: 0;
+}
+.ui-layout-north h1 {
+  margin: 0;
+  padding: 0;
+}
+.ui-layout-north .help {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.cart,
+.showItem,
+.editItem,
+.checkoutWindow {
+  display: none;
+}
+.active {
+  display: block !important;
+}
+.ui-layout-center {
+  position: relative;
+}
+.ui-layout-center > *:not(.active) {
+  display: none;
+}
+ul.itemsList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ul.itemsList li {
+  height: 35px;
+  padding: 0 0 0 50px;
+  font-size: 14px;
+  line-height: 35px;
+  font-weight: bold;
+  border-bottom: 1px solid #d2d2d1;
+  color: #333;
+  border-bottom: 1px solid rgba(0,0,0,0.30);
+  text-shadow: 0 1px 1px #fff;
+  background: #e0e0e1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e0e0e1));
+  background: -moz-linear-gradient(top, #fff, #e0e0e1);
+  background: linear-gradient(top, #fff, #e0e0e1);
+  -moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+  overflow: hidden;
+}
+ul.itemsList li img {
+  float: left;
+  padding: 5px;
+}
+ul.itemsList li.active {
+  background: url("../img/bubblesNav.png") no-repeat center right;
+}
+ul.purchasedList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ul.purchasedList li {
+  padding: 10px 15px 10px 0;
+  font-weight: bold;
+  border-bottom: 2px solid #d2d2d1;
+  color: #333;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+ul.purchasedList li img {
+  float: left;
+  padding: 5px;
+}
+ul.purchasedList li button {
+  top: 20px;
+  left: 350px;
+}
+/*  Form Items */
+form {
+  border-bottom: 1px solid #d2d2d1;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+button {
+  border: 1px solid #bbb;
+  font-weight: bold;
+  text-shadow: 0 1px 1px #fff;
+  font-family: Helvetica, Arial, "MS Trebuchet", sans-serif;
+  font-size: 14px;
+  color: #363636;
+  padding: 6px 10px;
+  margin: 1px 1px 1px 0;
+  outline: none;
+  background: #f9f9f9;
+  background: #e3e3e3;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e3e3e3));
+  background: -moz-linear-gradient(top, #f9f9f9, #e3e3e3);
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: 0 1px 1px #fff;
+  -webkit-box-shadow: 0 1px 1px #fff;
+  box-shadow: 0 1px 1px #fff;
+}
+button:active {
+  background: #f9f9f9;
+  background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#f9f9f9));
+  background: -moz-linear-gradient(top, #e3e3e3, #f9f9f9);
+  background: linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+button.default {
+  color: #fff;
+  border: 1px solid #3f68a5;
+  text-shadow: 0 -1px 1px #46677f;
+  background: #4775b8;
+  background: -webkit-gradient(linear, left top, left bottom, from(#7bb5db), to(#4775b8));
+  background: -moz-linear-gradient(top, #7bb5db, #4775b8);
+  background: linear-gradient(top, #7bb5db, #4775b8);
+}
+button.default:active {
+  background: #7bb5db;
+  background: -webkit-gradient(linear, left top, left bottom, from(#4775b8), to(#7bb5db));
+  background: -moz-linear-gradient(top, #4775b8, #7bb5db);
+  background: linear-gradient(top, #4775b8, #7bb5db);
+}
+label {
+  display: block;
+  margin: 0 0 20px 0;
+  overflow: visible;
+}
+label span {
+  display: block;
+  margin-bottom: 6px;
+  margin-left: -3px;
+  font-weight: bold;
+  font-size: 13px;
+}
+label input {
+  font-size: 14px;
+  display: block;
+}
+label input[type="checkbox"] {
+  width: 15px !important;
+  margin-right: 7px;
+  display: inline-block;
+}
+label input[type="checkbox"] + span {
+  display: inline;
+}
+label input[type="text"],
+label input[type="email"],
+input[type="password"] {
+  width: 220px;
+  margin: 0 2px 0 0;
+  padding: 4px 8px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+textarea {
+  width: 220px;
+  margin: 0 2px 0 0;
+  padding: 4px 8px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+textarea,
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  border: 1px solid #9e9fa2;
+  color: #363636;
+  text-shadow: 0 1px 1px #fff;
+  font-size: 17px;
+  outline: none;
+  padding: 10px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  background: #fafafa;
+  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e7), to(#fafafa));
+  background: -moz-linear-gradient(top, #e6e6e7, #fafafa);
+  background: linear-gradient(top, #e6e6e7, #fafafa);
+  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e7), color-stop(0.3, #fafafa), to(#fafafa));
+}
+textarea {
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  height: 70px;
+}
