--- a/css/index.styl
+++ b/css/index.styl
@@ -32,15 +32,20 @@
   margin-left: 340px
   z-index: 10
   background: #fff
+  -webkit-box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
+  -moz-box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
+  box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
 
 .cardBack
   margin-top: 140px
   z-index: 5
   background: #F58025
+  -webkit-box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
+  -moz-box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
+  box-shadow: 2px 4px 10px 4px rgba(1, 1, 1, .5);
 
 .businessCard
   position: relative
-  display: block
   height: 468px
   padding: 5px
   border: 1px dotted black
@@ -57,12 +62,12 @@
   font-weight: lighter
   color: #807F83
 
-  .name
+  .who
     position: absolute
     top: 30px
     right: 50px
 
-    .who
+    .name
       color: #F58025
       font-size: 18px
       font-weight: normal
@@ -104,6 +109,7 @@
     .qrcode
       width: 215px
       height: 215px
+      background: url(http://api.qrserver.com/v1/create-qr-code/?data=BEGIN%3AVCARD%0AVERSION%3A2.1%0AN%3A%3B%3B%3B%3B%0AADR%3BINTL%3BPARCEL%3BWORK%3A%3B%3B1880%20S.%20Dairy%20Ashford%20Suite%20300%3BHouston%3BTX%3B70809%3BUSA%0AEMAIL%3BINTERNET%3Acraigb%40st-george.org%0AORG%3ARigNet%0ATEL%3BWORK%3A5043833130%0ATEL%3BWORK%3BFAX%3A4033322221%0ATEL%3BCELL%3A5043833130%0ATEL%3BWORK%3BDIRECT%3A5043833130%0ATITLE%3ATeacher%0AURL%3BWORK%3Arig.net%0AEND%3AVCARD%0A&size=215x215&margin=12&qzone=1&color=F58025) no-repeat top center
 
   .mottoBox
     position: absolute
@@ -218,9 +224,6 @@ ul.nav
       color: #F58025;
 
     button
-      position: absolute;
-      top: 85px
-      left: 380px
       width: 88px
 
     li button
@@ -281,7 +284,6 @@ ul.itemsList
     vbg-gradient(#ffffff, #e0e0e1)
     box-shadow(1px, 1px, 2px, rgba(0, 0, 0, 0.1))
     overflow: hidden
-
     
     img
       float: left
@@ -296,6 +298,7 @@ ul.purchasedList
   margin: 0
   padding: 0
   list-style: none
+  width:912px
 
   li
     padding: 10px 15px 10px 0
@@ -400,7 +403,7 @@ input[type="password"]
   text-shadow: 0 1px 1px #ffffff;
   font-size: 17px;
   outline: none;
-  padding: 10px;
+  padding: 0 10px;
   border-radius(20px)
   vbg-gradient(#e6e6e7, #fafafa)
   background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e7), color-stop(0.3, #fafafa), to(#fafafa));
